# nova-env-linter

./: README.md  main.py  pyproject.toml
tests/: test_main.py
